--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "myproject",
   "version": "0.1.0",
   "private": true,
-  "node":"v12.18.2"
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +15,9 @@
     "react-scripts": "3.4.1",
     "react-tabs": "^3.1.1"
   },
+  "engines": {
+    "node": "12.x"
+  }
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
